# nothunks

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  cabal.project  nothunks.cabal
.github/workflows/: checks.yml  ci.yml
scripts/: check-changelogs.sh
src/NoThunks/: Class.hs
src/NoThunks/Class/: Instances.hs  Internal.hs  Staged.hs
src/NoThunks/Class/Staged/: Instances.hs
test/: Main.hs
test/Test/NoThunks/: Class.hs
