cabal-version:      2.4
name:               nothunks
version:            0.1.0.0
synopsis:           Examine values for unexpected thunks
description:        Long lived application data typically should not contain
                    any thunks. This library can be used to examine values for
                    unexpected thunks, which can then be used in assertions.
                    This can be invaluable in avoiding memory leaks, or tracking
                    down existing ones.
license:            MIT
license-file:       LICENSE
bug-reports:        https://github.com/input-output-hk/nothunks
author:             IOHK
maintainer:         operations@iohk.io
copyright:          2018-2020 IOHK
category:           Development
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/nothunks

library
    exposed-modules:  NoThunks.Class
    build-depends:    base       >= 4.12 && < 5
                    , bytestring >= 0.10
                    , containers >= 0.6
                    , ghc-heap   >= 8.6
                    , text       >= 1.2
                    , time       >= 1.8
                    , vector     >= 0.12
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite nothunks-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Test.NoThunks.Class
    build-depends:    base           >= 4.12
                    , containers     >= 0.6
                    , ghc-prim       >= 0.5
                    , hedgehog       >= 1.0
                    , random         >= 1.1
                    , tasty          >= 1.2
                    , tasty-hedgehog >= 1.0
                    , text           >= 1.2
                    , nothunks
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
